finished first draft notes

--- a/paper/tex/geschichtliches/convolutionalNN/convolutionalnn.tex
+++ b/paper/tex/geschichtliches/convolutionalNN/convolutionalnn.tex
@@ -10,7 +10,7 @@ Im Jahr 1959 entdeckten die beiden Neurophysiologen Torsten Wiesel und David H. 
 \begin{itemize}
 \item Die \emph{simple cells} können einfache Kanten und Balken mit einer bestimmten Orientierung erkennen. Eine solche Zelle könnte zum Beispiel in der Lage sein einen Balken am unteren Bildrand als solchen zu erkennen. 
 
-\item Eine \emph{complex cell} ist ebenfalls dazu in der Lage diese Formen zu erkennen, allerdings mit dem Zusatz diese Konstellation von Formen auch an verschiedenen Positionen des Bildes zu erkennen. Bezogen auf das Beispiel vom letzten Punkt könnte diese Zellart auch in der Lage sein solche Balken in der Mitte oder am oberen Rand des Bildes zu erkennen. Diese Eigenschaft der Positionsunabhängigkeit eines Musters wird \emph{spatial invariance} genannt (\glqq räumliche Invarianz\grqq ).
+\item Eine \emph{complex cell} ist ebenfalls dazu in der Lage diese Formen zu erkennen, allerdings mit dem Zusatz diese Konstellation von Formen auch an verschiedenen Positionen des Bildes zu erkennen. Bezogen auf das Beispiel vom letzten Punkt könnte diese Zellart auch in der Lage sein solche Balken in der Mitte oder am oberen Rand des Bildes zu erkennen. Diese Eigenschaft der Positionsunabhängigkeit eines Musters wird \emph{spatial invariance} genannt (\glqq räumliche Invarianz'').
 \end{itemize}
 
 Einige Jahre später (1962) beschrieben die beiden Wissenschaftler, wie genau solche komplexen Zellen diese Eigenschaft erreichen. Diese Zellen summieren die Ausgaben von mehreren \emph{simple cells} auf. Alle beteiligten Zellen sind auf die gleichen Formen spezialisiert, analysieren jedoch jeweils einen unterschiedlichen Teil des Bildes (englisch: \emph{receptive fields}, siehe Abbildung \ref{fig:simpleVsComplex}). So kann zum Beispiel eine komplexe Zelle horizontale Balken an mehreren Positionen im Bild erkennen, indem sie auf die unterschiedlichen Ausgabewerte von mehreren simplen Zellen zurückgreift und diese aufaddiert. Diese Herangehensweise des Herunterbrechens einer komplexen Aufgabe in mehrere einfachere Aufgaben ist ein wesentliches Merkmal aller neuronalen Netze sowie der menschlichen Wahrnehmung im visuellen Kortex. 
@@ -47,7 +47,7 @@ Die rechte Darstellung ist hierbei auch noch unvollständig, denn es handelt sic
 \end{figure}
 
 \paragraph{Convolutional Layer}
-Der gegebene Matrix-Input wird mittels sogenannter \emph{Filter} (auch \emph{Neuron} oder \emph{Kernel} genannt) analysiert. Ein Filter besitzt eine feste Pixelgröße (\emph{Kernel-Size}) wie zum Beispiel 5 x 5. Diese spannt ein kleines \glqq Fenster\grqq  über der Matrix auf. Dieses Fenster scannt anschließend mit einer definierten Schrittweite zeilenweise die Eingabematrix. Mittels eines Parameters \emph{Padding} wird festgelegt, wie sich der Filter verhalten soll, wenn er den Rand der Matrix erreicht. Die betrachteten Pixel im Betrachtungsfenster aggregieren zu einem Neuron in der nächsten Schicht. Die Abbildung \ref{fig:cnn_convLayer} zeigt wie der sogenannte erste \emph{hidden Layer} dadurch aufgebaut wird. Wichtig: \emph{Die Größe dieser Ergebnismatrix ist abhängig von der Größe (Kernel-Size) des Filters, dem Padding und vor allem von der Schrittweite} \cite{cnnFunktionsweise2}. 
+Der gegebene Matrix-Input wird mittels sogenannter \emph{Filter} (auch \emph{Neuron} oder \emph{Kernel} genannt) analysiert. Ein Filter besitzt eine feste Pixelgröße (\emph{Kernel-Size}) wie zum Beispiel 5 x 5. Diese spannt ein kleines \glqq Fenster'' über der Matrix auf. Dieses Fenster scannt anschließend mit einer definierten Schrittweite zeilenweise die Eingabematrix. Mittels eines Parameters \emph{Padding} wird festgelegt, wie sich der Filter verhalten soll, wenn er den Rand der Matrix erreicht. Die betrachteten Pixel im Betrachtungsfenster aggregieren zu einem Neuron in der nächsten Schicht. Die Abbildung \ref{fig:cnn_convLayer} zeigt wie der sogenannte erste \emph{hidden Layer} dadurch aufgebaut wird. Wichtig: \emph{Die Größe dieser Ergebnismatrix ist abhängig von der Größe (Kernel-Size) des Filters, dem Padding und vor allem von der Schrittweite} \cite{cnnFunktionsweise2}. 
 
 \begin{figure}[!htb]
 	\centering
@@ -56,7 +56,7 @@ Der gegebene Matrix-Input wird mittels sogenannter \emph{Filter} (auch \emph{Neu
 	\label{fig:cnn_convLayer}
 \end{figure}
 
-Eine Schrittweite von 2 bei einem Betrachtungsfenster von 2 x 2 Pixeln führt beispielsweise pro Filter zu einer Halbierung der Größe der Ergebnis-Matrix im Vergleich zur Input-Matrix. Da in diesem Beispiel immer 4 Pixel gleichzeitig an einem Filter \glqq hängen\grqq  wird die Eingabe in gewisser Weise \emph{gefaltet} (englisch \emph{convolution}). 
+Eine Schrittweite von 2 bei einem Betrachtungsfenster von 2 x 2 Pixeln führt beispielsweise pro Filter zu einer Halbierung der Größe der Ergebnis-Matrix im Vergleich zur Input-Matrix. Da in diesem Beispiel immer 4 Pixel gleichzeitig an einem Filter \glqq hängen'' wird die Eingabe in gewisser Weise \emph{gefaltet} (englisch \emph{convolution}). 
 
 In der Praxis wird oft ein convolutional Layer mit 32 oder 16 Bit Filtern verwendet. Jeder dieser Filter generiert eine eigene Ausgabematrix. Als nächste Schicht folgt erneut ein convolutional Layer, welcher die Ausgabematrizen als neuen Input verwendet. Die dadurch generierte Ausgabe wird auch \emph{activation map} oder \emph{feature map} genannt und wird wiederum in einen \emph{Pooling Layer} gesteckt. 
 
@@ -94,7 +94,7 @@ Ein weit verbreiteter Pooling-Mechanismus stellt der sogenannte \emph{MaxPooling
 
 
 \paragraph{Fully Connected Layer}
-Diese Schicht wird auch oft als \emph{Dense Layer} bezeichnet. Ausgangspunkt für die Verwendung dieses Layers ist, dass sämtliche high-level Merkmale bereits durch die vorangegangenen Schichten erkannt wurden. In dieser Schicht werden sämtliche Neuronen mit allen Ein- und Ausgabewerten verbunden. Generell fasst diese Schicht alle high-level Merkmale zu den jeweiligen Ausgabeklassen zusammen. Wenn wir beim Beispiel der Ziffernerkennung bleiben, spiegelt die Vorgängerschicht die einzelnen Schnörkel und Striche der einzelnen Ziffern wieder. Der Dense Layer fasst diese dann zu den wirklichen Ziffern zusammen. So entsteht als Ausgabe hierbei ein N-dimensionaler Vektor, welcher in den einzelnen Komponenten die jeweilige Wahrscheinlichkeit hält, dass es sich um die jeweilige Klasse handelt oder nicht. Bei den Ziffern wäre dies ein 10 dimensionaler Vektor. Wenn man nun die Ziffer 0 erkennen wollen würde, kann es gut sein, dass sich das Netz \glqq nicht ganz sicher\grqq  ist, da die Ziffer 9 im oberen Bereich zum Beispiel ebenfalls eine Rundung besitzt. Die Ausgabe könnte dann so aussehen, dass alle Komponenten bis auf die am Index 0 und 9 mit einer Wahrscheinlichkeit von 0 belegt wurden. 
+Diese Schicht wird auch oft als \emph{Dense Layer} bezeichnet. Ausgangspunkt für die Verwendung dieses Layers ist, dass sämtliche high-level Merkmale bereits durch die vorangegangenen Schichten erkannt wurden. In dieser Schicht werden sämtliche Neuronen mit allen Ausgabewerten verbunden. Generell fasst diese Schicht alle high-level Merkmale zu den jeweiligen Ausgabeklassen zusammen. Wenn wir beim Beispiel der Ziffernerkennung bleiben, spiegelt die Vorgängerschicht die einzelnen Schnörkel und Striche der einzelnen Ziffern wieder. Der Dense Layer fasst diese dann zu den wirklichen Ziffern zusammen. So entsteht als Ausgabe hierbei ein N-dimensionaler Vektor, welcher in den einzelnen Komponenten die jeweilige Wahrscheinlichkeit hält, dass es sich um die jeweilige Klasse handelt oder nicht. Bei den Ziffern wäre dies ein 10 dimensionaler Vektor. Wenn man nun die Ziffer 0 erkennen wollen würde, kann es gut sein, dass sich das Netz \glqq nicht ganz sicher'' ist, da die Ziffer 9 im oberen Bereich zum Beispiel ebenfalls eine Rundung besitzt. Die Ausgabe könnte dann so aussehen, dass alle Komponenten bis auf die am Index 0 und 9 mit einer Wahrscheinlichkeit von 0 belegt wurden. 
 
 \paragraph{Training} 
 Um sämtliche Gewichte und Schwellwerte des Netzes richtig anpassen zu können, wird auf einen Trainingsalgorithmus zurückgegriffen. Das in diesem Fall genutzte Verfahren der \emph{Backpropagation} ist von fundamentaler Bedeutung für alle aktuellen Architekturen, daher bekommt er eine eigenen Abschnitt (siehe Kapitel \ref{sec:backprop}). 
