--- a/paper/tex/geschichtliches/perceptor/perceptor.tex
+++ b/paper/tex/geschichtliches/perceptor/perceptor.tex
@@ -19,8 +19,8 @@ Die Funktion, welche berechnet, ob ein Schwellwert überschritten wird oder nich
 
 \begin{equation} \label{eq:aktFkt}
 g(\mathbf{z}) =\begin{cases}
-	0 & \mbox{if } \mathbf{z} \leq \theta \\
-    1 & \mbox{if } \mathbf{z} > \theta
+    1 & \mbox{if } z \geq 0 \\
+	-1 & \mbox{if } z < 0 
   \end{cases}
 \end{equation}
 
