added backup notes

--- a/slides/tex/geschichtliches/adeline/adeline.tex
+++ b/slides/tex/geschichtliches/adeline/adeline.tex
@@ -120,7 +120,7 @@ J(w)  = \frac{1}{2} \sum_{i} (\text{target}^{(i)} - \text{output}^{(i)})^2 \quad
 \column{0.5\textwidth}
 \begin{itemize}
 \item Differenzieren von Funktionen mit mehreren Eingabewerten
-\item Beispiel: $z = f(x) = x^2 + y^2$
+\item Beispiel: $z = f(x, y) = x^2 + y^2$
 \end{itemize}
 
 \hspace{2mm}
