--- a/slides/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron.tex
+++ b/slides/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron.tex
@@ -1,4 +1,4 @@
-\subsection{McCulloch-Pitts-Neuron }
+\subsection{McCulloch-Pitts-Neuron}
 
 \begin{frame}
 \frametitle{Zusammenhang - Biologisches Neuron}
@@ -29,7 +29,7 @@
 
 
 \begin{frame}
-\frametitle{MP-Neuron}
+\frametitle{McCulloch-Pitts-Neuron}
 
 \begin{columns}
 
@@ -97,6 +97,8 @@ f(g(x)) =\begin{cases}
     \item Fkt. \emph{f} prüft ob Schwellwert überschritten
 \end{itemize}}
 
+\note[item]{Es folgt: Logik Gattter mit Modell dargestellt}
+
 \end{frame}
 
 
@@ -108,6 +110,7 @@ f(g(x)) =\begin{cases}
 \end{figure}
 
 \note[item]{Anhand von Grafik erläutern}
+\note[item]{Schwellwert auf der linken Seite notiert}
 
 \end{frame}
 
@@ -148,7 +151,7 @@ f(g(x)) =\begin{cases}
 
 \end{columns}
 
-\note[item]{keine kontinuierlichen Eignabewerte
+\note[item]{keine kontinuierlichen Eingabewerte
 \begin{itemize}
     \item nur boolesche Werte
     \item Schwierig für komplexe Anwendungen 
