--- a/slides/tex/geschichtliches/perceptron/perceptron.tex
+++ b/slides/tex/geschichtliches/perceptron/perceptron.tex
@@ -87,8 +87,8 @@ z & =  w_1x_{1} + \dots + w_mx_{m} \\
 \column{0.4\textwidth}
 \begin{align*}
 g(z) =\begin{cases}
-	0 & \mbox{if } z \leq 0 \\
-    1 & \mbox{if } z > 0
+    1 & \mbox{if } z \geq 0 \\
+	-1 & \mbox{if } z < 0 
   \end{cases}
 \end{align*}
 \vspace{1mm}
