--- a/slides/tex/geschichtliches/adeline/adeline.tex
+++ b/slides/tex/geschichtliches/adeline/adeline.tex
@@ -38,7 +38,7 @@
 \frametitle{Delta-Regel}
 
 \begin{itemize}
-\item Leralgorithmus durch Erfinder geprägt
+\item Lernalgorithmus durch Erfinder geprägt
 \item auch unter \emph{Least-Mean-Square}-Algrithmus bekannt
 \item Wesentlicher Vorteil: Ableitbare Kostenfunktion
 \end{itemize}
