--- a/slides/tex/slides_main.tex
+++ b/slides/tex/slides_main.tex
@@ -1,4 +1,5 @@
-\documentclass[10pt, handout]{beamer}
+\documentclass[10pt]{beamer}
+% to hide notes set beamer option
 %\documentclass[10pt, handout]{beamer} % exportiere Frames ohne Animation
 
 % template preamble
