--- a/slides/tex/zusatz/zusatz_part.tex
+++ b/slides/tex/zusatz/zusatz_part.tex
@@ -2,4 +2,5 @@
 
 \input{zusatz/multilayerPerceptron/multilayerPerceptron}
 \input{zusatz/recurrentNN/recurrentNN}
+\input{zusatz/convolutionalNN/convolutionalNN}
 
