--- a/slides/tex/aktuelleEntwicklung/convolutionalNN/convolutionalNN.tex
+++ b/slides/tex/aktuelleEntwicklung/convolutionalNN/convolutionalNN.tex
@@ -138,8 +138,8 @@
 \frametitle{Fully Connected Layer}
 
 \begin{itemize}
-\item Ausgagngspunkt: \emph{High-Level} Merkmale bereits durch frühere Schichten erkannt 
-\item Alle Neuronen der Ausgabeschicht sowie dieser Merkmale alle direkt miteinander verbunden
+\item Ausgangspunkt: \emph{High-Level} Merkmale bereits durch frühere Schichten erkannt 
+\item Alle Neuronen der Ausgabeschicht sowie dieser Merkmale direkt miteinander verbunden
 \item Ausgabe sollte mit den richtigen Gewichten / Schwellwerten relativ eindeutige Ausgaben generieren
 \end{itemize}
 
