--- a/slides/tex/slides_main.tex
+++ b/slides/tex/slides_main.tex
@@ -51,9 +51,9 @@ $
 }
 
 % pdfpages - Einstellungen (Notizen)
-%\setbeameroption{hide notes} % Only slides
+\setbeameroption{hide notes} % Only slides
 %\setbeameroption{show only notes} % Only notes
-\setbeameroption{show notes on second screen=right} % Both
+%\setbeameroption{show notes on second screen=right} % Both
 
 \comment{
 \pgfpagesuselayout{4 on 1}[border shrink=1mm]
