--- a/slides/tex/zusatz/convolutionalNN/convolutionalNN.tex
+++ b/slides/tex/zusatz/convolutionalNN/convolutionalNN.tex
@@ -52,7 +52,7 @@
 
 \begin{itemize}
 	\item Besitzt feste Pixelgröße (\emph{Kernelsize}) \& Schrittweite
-	\item Scannt Bild Zeilenweise
+	\item Scannt Bild zeilenweise
 	\item \emph{Padding} legt Verfahren für Rand des Bildes fest
 	\item Ausgabe wird \emph{activation} oder \emph{feature map} genannt
 \end{itemize}
