--- a/slides/tex/zusatz/recurrentNN/recurrentNN.tex
+++ b/slides/tex/zusatz/recurrentNN/recurrentNN.tex
@@ -4,7 +4,7 @@
 \frametitle{Recurrent Neural Network}
 
 \begin{itemize}
-\item Bekommen sowohl von Eingangssignale sowohl durch Trainingsdatensatz als auch durch Rückkopplungen. 
+\item Eingangssignale sowohl durch Trainingsdatensatz als auch durch Rückkopplungen
 \end{itemize}
 
 \begin{columns}
