--- a/verweise/verweise.bib
+++ b/verweise/verweise.bib
@@ -11,7 +11,7 @@
 }
 
 @misc{klproblem,
-  title = {{Definition Klassifizierungssproblem}},
+  title = {{Definition Klassifizierungsproblem}},
   howpublished = {\url{http://ekpwww.physik.uni-karlsruhe.de/~tkuhr/HauptseminarWS1112/Keck_handout.pdf}},
   note = {Aufgerufen am: 15-03-2020}
 }
@@ -29,7 +29,7 @@
 }
 
 @misc{partAbl,
-  title = {{Khan Academy - Partielle Ableitungen (Funktion mit zwei Eingabewerten}},
+  title = {{Khan Academy - Partielle Ableitungen (Funktion mit zwei Eingabewerten)}},
   howpublished = {\url{https://www.youtube.com/watch?v=1CMDS4-PKKQ&t=542s}},
   note = {Aufgerufen am: 16-03-2020}
 }
